--- a/fe/package.json
+++ b/fe/package.json
@@ -13,6 +13,7 @@
     "@account-kit/infra": "^4.0.0-alpha.10",
     "@account-kit/react": "^4.0.0-alpha.10",
     "@tanstack/react-query": "^5.50.1",
+    "daisyui": "^4.12.10",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
