--- a/fe/tsconfig.json
+++ b/fe/tsconfig.json
@@ -18,9 +18,15 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/meme-editor/page.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/components/Fixtures/FixtureCard"
+  ],
   "exclude": ["node_modules"]
 }
