--- a/fe/package.json
+++ b/fe/package.json
@@ -16,7 +16,8 @@
     "daisyui": "^4.12.10",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-rnd": "^10.4.12"
   },
   "devDependencies": {
     "@types/node": "^20",
