--- a/blockend/package.json
+++ b/blockend/package.json
@@ -8,13 +8,11 @@
   "private": true,
   "dependencies": {
     "@chainlink/env-enc": "^1.0.5",
-    "@chainlink/functions-toolkit": "^0.2.7",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.1",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "^5.0.1",
     "@openzeppelin/contracts-upgradeable": "^4.9.3",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/hardhat": "^6.1.3",
     "axios": "^1.1.3",
     "chai": "^4.3.6",
     "eth-crypto": "^2.4.0",
@@ -35,6 +33,14 @@
     "typechain": "^8.1.0"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-verify": "^2.0.9"
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
+    "@nomicfoundation/hardhat-ethers": "^3.0.6",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@types/chai": "^4.3.17",
+    "@types/mocha": "^10.0.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
