--- a/fe/package.json
+++ b/fe/package.json
@@ -15,7 +15,9 @@
     "@tanstack/react-query": "^5.50.1",
     "daisyui": "^4.12.10",
     "next": "14.2.4",
-    "react": "^18",
+    "react": "^18",   
+    "frog": "latest",
+    "hono": "^4",
     "react-dom": "^18",
     "react-rnd": "^10.4.12"
   },
