--- a/fe/package.json
+++ b/fe/package.json
@@ -14,10 +14,11 @@
     "@account-kit/react": "^4.0.0-alpha.10",
     "@tanstack/react-query": "^5.50.1",
     "daisyui": "^4.12.10",
-    "next": "14.2.4",
-    "react": "^18",   
     "frog": "latest",
     "hono": "^4",
+    "next": "14.2.4",
+    "pinata": "^0.1.10",
+    "react": "^18",
     "react-dom": "^18",
     "react-rnd": "^10.4.12"
   },
