--- a/fe/package.json
+++ b/fe/package.json
@@ -15,7 +15,9 @@
     "@tanstack/react-query": "^5.50.1",
     "daisyui": "^4.12.10",
     "frog": "latest",
-    "hono": "^4",
+    "hono": "^4",    
+    "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "^2.44.2",
     "next": "14.2.4",
     "pinata": "^0.1.10",
     "react": "^18",
